--- a/TableSegNet.ipynb
+++ b/TableSegNet.ipynb
@@ -6,7 +6,7 @@
       "name": "TableSegNet.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOjyYBl20HnDc5JJPzoFLQe",
+      "authorship_tag": "ABX9TyMsbN5yfke50bsgMyCIBi/h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y1qZyTsVpy7Q",
-        "outputId": "26bf87f2-15da-47f6-e725-49ee91b255cc"
+        "outputId": "ec08a6eb-7375-48aa-bb3d-b8a09161f4a4"
       },
       "source": [
         "# mount Google Drive\n",
@@ -108,6 +108,10 @@
       },
       "source": [
         "# TabSegNet implementation with Tensorflow\n",
+        "#NormType = 'batch'\n",
+        "NormType = 'instance' # default\n",
+        "DropRate = 0.2\n",
+        "\n",
         "def TableSegNet(input_shape, num_classes, seg_layers=3, detect_layers=6, first_filters=16):\n",
         "    print('Build TableSegNet: input shape = ', input_shape, ', num_classes = ', num_classes)\n",
         "    \n",
@@ -237,7 +241,7 @@
         "    normalized = (x - mean) * inv\n",
         "    return self.scale * normalized + self.offset\n"
       ],
-      "execution_count": 3,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -254,16 +258,12 @@
         "num_classes = 1 # for table detection\n",
         "input_shape = [768, 640, 1]\n",
         "\n",
-        "#NormType = 'batch'\n",
-        "NormType = 'instance' # default\n",
-        "DropRate = 0.2\n",
-        "\n",
         "model = TableSegNet(input_shape, num_classes, seg_layers=3, detect_layers=6, first_filters=32)\n",
         "\n",
         "model.summary()\n",
         "#tf.keras.utils.plot_model(model, to_file = \"model.png\", show_shapes=True)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -517,7 +517,7 @@
         "            plt.imshow(Imgs[i], cmap='gray', vmin=0, vmax=255)\n",
         "    plt.show()\n"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -554,7 +554,7 @@
         "#print('XTrain: ', XTrain.shape, '; YTrain: ', YTrain.shape)\n",
         "print('XTest:  ', XTest.shape,  '; YTest:  ', YTest.shape)\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -578,7 +578,7 @@
         "    gray = cv2.cvtColor(ImgIn, cv2.COLOR_RGB2GRAY)\n",
         "    return np.stack([gray], axis=-1)\n"
       ],
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -598,7 +598,7 @@
         "#print('Val: ', XVal.shape, YVal.shape)\n",
         "print('Test:  ', XTest.shape, YTest.shape)\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -667,7 +667,7 @@
         "\n",
         "    return xy[..., 0:xd], xy[..., xd:]\n"
       ],
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -1034,9 +1034,57 @@
         "      cv2.rectangle(xRGB2, (rg.xmin, rg.ymin), (rg.xmax, rg.ymax), (255, 0, 0), 2)\n",
         "\n",
         "    #ViewImgs([xRGB, yy_table, yy_border, xRGB2])#, yy_bg])\n",
-        "    ViewImgs([xRGB, xRGB2])\n"
+        "    ViewImgs([xRGB, xRGB2])\n",
+        "\n",
+        "def DataGenAux(X, Y, scale=4, size=1, AugFunt=None):\n",
+        "    nData = X.shape[0]\n",
+        "    h, w = X.shape[1], X.shape[2]\n",
+        "    scale = 2 ** scale\n",
+        "\n",
+        "    ids = np.random.permutation(nData)\n",
+        "    i = 0\n",
+        "    while True:\n",
+        "        # permute data\n",
+        "        if i + size > nData:\n",
+        "            ids = np.random.permutation(nData)\n",
+        "            i = 0\n",
+        "        # select data\n",
+        "        bx, by, ba = [], [], []\n",
+        "        for j in range(size):\n",
+        "            x0, y0 = X[ids[i + j]], Y[ids[i + j]]\n",
+        "            if AugFunt:\n",
+        "                x0, y0 = AugFunt(x0, y0)\n",
+        "            bx.append(x0)\n",
+        "\n",
+        "            y, ya = LabelAug(y0)\n",
+        "            by.append(y)\n",
+        "            ba.append(ya)\n",
+        "\n",
+        "        # batch\n",
+        "        bx, by, ba = np.asarray(bx), np.asarray(by), np.asarray(ba)\n",
+        "        ba = tf.image.resize(ba, (h // scale, w // scale))\n",
+        "        i += size\n",
+        "\n",
+        "        # int to float\n",
+        "        bx = Norm(bx)\n",
+        "        by = Norm(by)\n",
+        "        ba = Norm(ba)\n",
+        "\n",
+        "        yield (bx, {'y_seg': by, 'y_detect': ba})\n",
+        "\n",
+        "def LabelAug(y, margin=16):\n",
+        "    y0 = ((y == 0) * 255).astype('uint8')\n",
+        "\n",
+        "    kernel = np.ones((margin, margin), np.uint8)\n",
+        "    y_center = cv2.erode(y0, kernel)\n",
+        "    y_extend = cv2.dilate(y0, kernel)\n",
+        "\n",
+        "    y1 = np.stack([y_center, y_extend - y_center, 255 - y_extend], axis=-1)\n",
+        "    y2 = np.stack([y_extend, 255 - y_extend], axis=-1)\n",
+        "\n",
+        "    return y1, y2\n"
       ],
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -1051,13 +1099,13 @@
       "source": [
         "Ckpts_Path = 'gdrive/MyDrive/Experiment/TableSegNet/Models'\n",
         "\n",
-        "#ModelName = 'ICDAR19'\n",
-        "ModelName = 'ICDAR19Plus'\n",
+        "ModelName = 'ICDAR19'\n",
+        "#ModelName = 'ICDAR19Plus'\n",
         "#ModelName = 'ICDAR13Plus'\n",
         "\n",
         "model.load_weights(Ckpts_Path + '/' + ModelName)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1086,7 +1134,7 @@
         "id = 0\n",
         "SampleEval(model, XTest[id], YTest[id], num_classes, thresh=0.6)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1118,6 +1166,91 @@
       },
       "source": [
         "TestModel(model, XTest, YTest, 1, thresh=0.6)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0L0pfjWF5wGX"
+      },
+      "source": [
+        "def Train(XTrain, YTrain, ModelName, XVal=None, YVal=None, XTest=None, YTest=None, SecondPhase=True):\n",
+        "    # data shape\n",
+        "    nDataTrain, IMG_H, IMG_W, IMG_C = XTrain.shape\n",
+        "    num_classes = np.max(YTrain)\n",
+        "    input_shape = [IMG_H, IMG_W, IMG_C]\n",
+        "\n",
+        "    # build the model\n",
+        "    model = TableSegNet(input_shape, num_classes, seg_layers=3, detect_layers=6, first_filters=32)\n",
+        "    model.summary()\n",
+        "\n",
+        "    Opt = tf.keras.optimizers.Adam(learning_rate=0.0001)\n",
+        "    Losses = {\n",
+        "        \"y_seg\": \"categorical_crossentropy\",\n",
+        "        \"y_detect\": \"categorical_crossentropy\",\n",
+        "    }\n",
+        "    lossWeights = {\"y_seg\": 1.0, \"y_detect\": 0.3}\n",
+        "    model.compile(optimizer=Opt, loss=Losses, loss_weights=lossWeights, metrics=['accuracy'])\n",
+        "\n",
+        "    # train parameters\n",
+        "    EPOCHS = 100\n",
+        "    BATCH_SIZE = 2\n",
+        "    Checkpoint = ModelCheckpoint('Ckpts/' + ModelName, monitor='val_y_seg_accuracy', mode='max', save_weights_only=True,\n",
+        "                                  save_best_only=True, verbose=1)\n",
+        "\n",
+        "    # first phase\n",
+        "    if XVal is not None:\n",
+        "        nDataVal = XVal.shape[0]\n",
+        "        H = model.fit(DataGenAux(XTrain, YTrain, scale=4, size=BATCH_SIZE, AugFunt=DataAug),\n",
+        "                      steps_per_epoch=nDataTrain // BATCH_SIZE, epochs=EPOCHS,\n",
+        "                      validation_data=DataGenAux(XVal,  YVal,  scale=4, size=1),\n",
+        "                      validation_steps=nDataVal, validation_freq=1,\n",
+        "                      callbacks=[Checkpoint], verbose=1)\n",
+        "\n",
+        "    # second phase\n",
+        "    \n",
+        "    if XVal is None or SecondPhase:\n",
+        "        ROUNDS = 1\n",
+        "        nFold = 3\n",
+        "        nVal_k = nDataTrain // nFold\n",
+        "        EPOCHS = 50\n",
+        "\n",
+        "        for r in range(ROUNDS):\n",
+        "            for k in range(nFold):\n",
+        "                XVal_k, YVal_k = XTrain[nVal_k*k:nVal_k*(k+1), ...], YTrain[nVal_k*k:nVal_k*(k+1), ...]\n",
+        "                H = model.fit(DataGenAux(XTrain, YTrain, scale=4, size=BATCH_SIZE, AugFunt=DataAug),\n",
+        "                              steps_per_epoch=nDataTrain // BATCH_SIZE, epochs=EPOCHS,\n",
+        "                              validation_data=DataGenAux(XVal_k,  YVal_k,  scale=4, size=1),\n",
+        "                              validation_steps=nVal_k, validation_freq=1,\n",
+        "                              callbacks=[Checkpoint], verbose=1)\n",
+        "\n",
+        "    # test\n",
+        "    if XTest is not None:\n",
+        "        TestModel(model, XTest, YTest, num_classes, thresh=0.9)\n"
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EGNPb-nODt74"
+      },
+      "source": [
+        "ICDAR19_Train = 'gdrive/MyDrive/Experiment/TableSegNet/Data/ICDAR19/Train'\n",
+        "ICDAR19_Test  = 'gdrive/MyDrive/Experiment/TableSegNet/Data/ICDAR19/Test'\n",
+        "\n",
+        "# ICDAR19 model\n",
+        "XTrain, YTrain = LoadH5Folders([ICDAR19_Train]) \n",
+        "XTest,  YTest  = LoadH5Folders([ICDAR19_Test])\n",
+        "\n",
+        "# RGB -> grayscale\n",
+        "XTrain = np.stack([FeatImg(x) for x in XTrain])\n",
+        "XTest = np.stack([FeatImg(x) for x in XTest])\n",
+        "\n",
+        "Train(XTrain, YTrain, 'ICDAR19 Model', XTest=XTest, YTest=YTest)"
       ],
       "execution_count": null,
       "outputs": []
